# kenya-compliance

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
kenya_compliance/: hooks.py  modules.txt
kenya_compliance/fixtures/: custom_field.json  kra_etims_routes_table_navari.json  navari_etims_country.json  navari_etims_import_item_status.json  navari_etims_packaging_unit.json  navari_etims_product_type.json  navari_etims_purchase_receipt_type.json  navari_etims_routes.json  navari_etims_stock_movement_type.json  navari_etims_transaction_type.json  navari_etims_unit_of_quantity.json  navari_kra_etims_item_classification.json  navari_kra_etims_payment_type.json  navari_kra_etims_route_table.json  navari_kra_etims_taxation_type.json  navari_kra_etims_transaction_progress.json
kenya_compliance/kenya_compliance/: handlers.py  interceptors.py  logger.py  utils.py
kenya_compliance/kenya_compliance/api/: apis.py
kenya_compliance/kenya_compliance/apis/: api_builder.py  apis.py  remote_response_status_handlers.py  test_api_builder.py
kenya_compliance/kenya_compliance/background_tasks/: tasks.py
kenya_compliance/kenya_compliance/doctype/: doctype_names_mapping.py
kenya_compliance/kenya_compliance/doctype/etims_communication_keys/: etims_communication_keys.js  etims_communication_keys.json  etims_communication_keys.py  test_etims_communication_keys.py
kenya_compliance/kenya_compliance/doctype/navari_etims_branch/: navari_etims_branch.js  (+4 more)
kenya_compliance/kenya_compliance/setup/: after_install.py  after_uninstall.py
(+170 files in other folders)
