[project]
name = "kenya_compliance"
authors = [
    { name = "Navari Ltd", email = "solutions@navari.co.ke"}
]
description = "KRA Etims Integration for ERPNext based applications"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
    "aiohttp==3.9.1",
    "deprecation==2.1.0"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
